--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -19,6 +19,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Task 1 Exemplo
-        run: echo "Task 1 Exemplo"
+        run: echo 'Task 1 Exemplo'
         
   
