--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -1,24 +1,21 @@
-# This is a basic workflow to help you get started with Actions
+name: Treinamento
 
-name: Testando Matrix
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
- build:
-   strategy:
-    matrix:
-      os: [ubuntu-latest, macos-latest, windows-latest]
+  build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Task 1 Exemplo
-        run: echo 'Task 1 Exemplo'
-        
-  
+     - name: Task 1 Exemplo
+       run: echo 'Task 1 Exeplo'
+
+ 
+
