--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -14,6 +14,10 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
+     - uses: actions/setup-node@v2.1.4
+       with:
+        node-version: 6
+        
      - name: Task 1 Exemplo
        run: echo 'Task 1 Exeplo'
 ##################################################################################################
